--- a/server/views/courses.jade
+++ b/server/views/courses.jade
@@ -15,6 +15,29 @@ html
     // FONT AWESOME SCRIPT
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
   body
+    //google auth stuff
+    script.
+      function logOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        if(auth2.isSignedIn.get()){
+          auth2.signOut().then(function () {
+            console.log('User signed out.');
+            window.location.replace("login");
+          });
+        }
+
+      }
+      function onLoad() {
+      gapi.load('auth2', function() {
+      auth2 = gapi.auth2.init({
+        client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
+        cookiepolicy: 'single_host_origin',
+        ux_mode: 'redirect',
+        redirect_uri: 'http://localhost:3000/home',
+        hosted_domain: 'mymacewan.ca',
+      });
+      });
+      }
     .wrapper
       // Sidebar
       nav#sidebar
@@ -57,7 +80,7 @@ html
               i.fas.fa-cog
               | Settings
           li
-            a(href='login')
+            a(href='#' onclick='logOut();')
               i.fas.fa-sign-out-alt
               | Logout
       // Page Content
@@ -95,3 +118,5 @@ html
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js' integrity='sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0' crossorigin='anonymous')
     // Sidebar Animation
     script(type='text/javascript' src='/javascripts/sidebar.js')
+    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
+    script(type='text/javascript' src='/javascripts/google.js')
