--- a/server/views/login.jade
+++ b/server/views/login.jade
@@ -12,19 +12,14 @@ html(lang='en')
     link(rel='stylesheet' type='text/css' href='/stylesheets/login-page.css')
     // FAVICON LINK
     link(rel='icon' type='image/png' href='/images/donut.png')
-    script(src='https://apis.google.com/js/platform.js?onload=init' async='' defer='')
+    
   body
+    //google auth stuff
+    script(src='https://apis.google.com/js/platform.js?onload=initSignIn' async='' defer='')
+    script(type='text/javascript' src='/javascripts/google.js')
     script(type='text/javascript').
-      gapi.load('auth2', function(){
-      //Retrieve the singleton for the GoogleAuth library and set up the client.
-        auth2 = gapi.auth2.init({
-          client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
-          cookiepolicy: 'single_host_origin',
-          ux_mode: 'redirect',
-          redirect_uri: 'http://localhost:3000/home',
-          hosted_domain: 'mymacewan.ca',
-        });
-      });
+      var startApp = initSignIn();
+
   body
     .background-image
     .loginBox
@@ -37,7 +32,7 @@ html(lang='en')
         p Password
         input(type='password' name='' placeholder='')
         input(type='submit' name='' value='Login')
+        //google sign in button
         .g-signin2(data-onsuccess='onSignIn')
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js' integrity='sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0' crossorigin='anonymous')
-    script(type='text/javascript' src='/javascripts/google.js')
