--- a/server/views/queues.jade
+++ b/server/views/queues.jade
@@ -4,14 +4,14 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut - Courses
+    title Maple Donut - Queues
 
     // 1,2 - CSS BOOTSTRAP LINK
-    // 3 - CUSTOM CSS LINK
+    // 3 - CUSTOM CSS LINKS
     // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    link(rel='stylesheet' href='/stylesheets/courses.css')
+    link(rel='stylesheet' href='/stylesheets/professors.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
     // 1 - FONT AWESOME SCRIPT
@@ -87,7 +87,7 @@ html
                 li
                   a(href='questions') Ask a Question
                 li
-                  a(href='#') Search Questions
+                  a(href='messages') Search Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
@@ -113,7 +113,7 @@ html
               | Logout
       // Page Content
       #page
-        nav.navbar.navbar-expand-md
+        nav.navbar.navbar-expand-ml
           #navbar-header.container-fluid
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
@@ -122,36 +122,34 @@ html
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
+          .h-100.d-inline-block
+          // Search bar
+          h3.text-center Available Professors
 
-          #course_container
-            .col-md-3
-              form.card.p-3.bg-light
-                h2.text-left Search For A Course
-                .input-group
-                  input#searchInput.form-control.py-2.border-right-0.border(type='search' value='Input your question here!')
-                  span.input-group-append(onclick="window.location.href='questions_ask';")
-                    button.btn.btn-outline-secondary.border-left-0.border(type='button')
-                      i.fa.fa-search
-            .col-md-3
-              form.card.p-3.bg-light
-                .list-group-flush
-
-                  h2.text-left Your Courses
-              .d-flex.justify-content
-                for courses in locals.data
-                  .card
-                    img(src='/images/choc-donut.png' alt='Avatar')
-                    .cardContainer
-                      a(href='professors/'+courses.course_name) #{courses.course_name}
-
-                  // ideally we have a for loop here  for each course
-                    a.list-group-item.list-group-item-action(href='#') Course A
-                    a.list-group-item.list-group-item-action(href='#') Course B
-                    a.list-group-item.list-group-item-action(href='#') Course C
-                    a.list-group-item.list-group-item-action(href='#') Course D
-                    a.list-group-item.list-group-item-action(href='#') Course E
+          .d-flex.justify-content
+            for names in locals.data
+              .card
+                img(src='/images/choc-donut.png' alt='Avatar')
+                hr
+                .cardContainer
+                  h3.text-center #{names.name}
 
 
-    .overlay
+          .d-flex.justify-content-center.h-100
+            .card
+              img(src='/images/choc-donut.png' alt='Avatar')
+              hr
+              .cardContainer
+                h3.text-center Name
+                h4.text-center Statistics
+                p.text-center Assistant Professor
+
+            .card
+              img(src='/images/jelly-donut.png' alt='Avatar')
+              hr
+              .cardContainer
+                h3.text-center Erwin Pascual
+                h4.text-center Computer Science
+                p.text-center Unemployed
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
