--- a/server/public/stylesheets/courses.css
+++ b/server/public/stylesheets/courses.css
@@ -50,3 +50,13 @@ a:focus {
     text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
 
 }
+
+
+#cards {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    color: #0f0f0f;
+    background-color: lightgrey;
+    border-width: thick;
+    border-style: dashed;
+}
