--- a/server/public/stylesheets/professors.css
+++ b/server/public/stylesheets/professors.css
@@ -155,7 +155,7 @@ a:focus {
     background-color: #252525;
     box-shadow: 0 2px 4px 0 rgba(211,211,211,0.2);
     transition: 0.3s;
-    border-radius: 5px;    
+    border-radius: 5px;
 }
 
 .card img{
@@ -172,13 +172,23 @@ a:focus {
     padding: 2px 8px;
 }
 
+h5 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 200;
+  font-size: 16px;
+  padding-top: 5px;
+  letter-spacing: 2px;
+  color: lightgreen;
+  text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
+}
+
 #content .cardContainer h3{
     margin-bottom: 0px;
     font-weight: 400;
     color: #FCA926;
     text-shadow: 0px 1px 2px rgb(197, 161, 119);
     letter-spacing: 1px;
-    
+
 }
 
 #content .cardContainer h4{
