--- a/server/views/chat.jade
+++ b/server/views/chat.jade
@@ -5,7 +5,6 @@ html
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     title Maple Donut - Chat
-    
     // 1,2 - CSS BOOTSTRAP LINK
     // 3 - CUSTOM CSS LINK
     // 4 - FAVICON LINK
@@ -13,7 +12,6 @@ html
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
     link(rel='stylesheet' href='/stylesheets/chat.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
-
     // 1 - FONT AWESOME SCRIPT
     // 2 - jQuery CDN - Slim version (=without AJAX)
     // 3 - Popper.JS
@@ -21,33 +19,74 @@ html
     // 5 - jQuery Custom Scroller CDN
     // 6 - Sidebar Animation JS
     script(src='https://kit.fontawesome.com/c13290656a.js' crossorigin='anonymous')
-    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js', integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ', crossorigin='anonymous')
-    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js', integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm', crossorigin='anonymous')
+    script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js' integrity='sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ' crossorigin='anonymous')
+    script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js' integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm' crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
     script(type='text/javascript' src='/javascripts/sidebar.js')
-
   body
-    //google auth stuff
+    // google auth stuff
     script.
-      function logOut() {
-        var auth2 = gapi.auth2.getAuthInstance();
-        if(auth2.isSignedIn.get()){
-          auth2.signOut().then(function () {
-            console.log('User signed out.');
-            window.location.replace("login");
-          });
-        }
+      window.onload = init;
 
+      function init() {
+        document.getElementById('add').onclick = add;
+      }
+      function add() {
+      var el = document.getElementById("message-list");
+      var node = document.createElement("li");
+      var div = document.createElement("div");
+      var msggrp = document.createElement("div");
+      var bttnwrap = document.createElement("div");
+      var menu = document.createElement("div");
+      var icon = document.createElement("img");
+      var status = document.createElement("span");
+      var statuscircle = document.createElement("span");
+      var bttn = document.createElement("bttn");
+      icon.src = '/images/letters/letter-s.svg'
+      icon.setAttribute("height", "40");
+      icon.setAttribute("width", "40");
+      icon.setAttribute("alt", "lettericon");
+      node.appendChild(icon);
+      node.setAttribute('class', 'message');
+      div.setAttribute('class', 'divider');
+      msggrp.setAttribute('class', 'messagegroup');
+      msggrp.innerText="Group #";
+      bttnwrap.setAttribute('class', 'button-wrapper');
+      menu.setAttribute('class', 'menu');
+      status.setAttribute('class', 'status');
+      statuscircle.setAttribute('class', "status-circle green");
+      bttn.setAttribute('class', 'content-button status-button open');
+      bttn.innerText="Open";
+      el.appendChild(node);
+      node.appendChild(div);
+      node.appendChild(msggrp);
+      
+      status.innerText="message snippet";
+      node.appendChild(status);
+      bttnwrap.appendChild(bttn);
+      bttnwrap.appendChild(menu);
+      node.appendChild(bttnwrap);
+      status.appendChild(statuscircle);
+      
+      }
+      function logOut() {
+      var auth2 = gapi.auth2.getAuthInstance();
+      if (auth2.isSignedIn.get()) {
+      auth2.signOut().then(function() {
+      console.log('User signed out.');
+      window.location.replace("login");
+      });
+      }
       }
       function onLoad() {
       gapi.load('auth2', function() {
       auth2 = gapi.auth2.init({
-        client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
-        cookiepolicy: 'single_host_origin',
-        ux_mode: 'redirect',
-        redirect_uri: 'http://localhost:3000/home',
-        hosted_domain: 'mymacewan.ca',
+      client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
+      cookiepolicy: 'single_host_origin',
+      ux_mode: 'redirect',
+      redirect_uri: 'http://localhost:3000/home',
+      hosted_domain: 'mymacewan.ca',
       });
       });
       }
@@ -74,20 +113,24 @@ html
             a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-book
               | Courses
-              ul#coursesSubmenu.collapse.list-unstyled
-                li
-                  a(href='courses') Current Courses
-                li 
-                  a(href='#') Search Courses
+            ul#coursesSubmenu.collapse.list-unstyled
+              a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
+              li
+                a(href='#coursesSubmenu' data-toggle='collapse' aria-expanded='false')
+                a(href='courses') Current Courses
+              li
+                a(href='#') Search Courses
           li.active
             a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-question-circle
               | Questions
-              ul#questionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='questions') Ask a Question
-                li 
-                  a(href='#') Search Questions
+            ul#questionsSubmenu.collapse.list-unstyled
+              a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
+              li
+                a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
+                a(href='questions') Ask a Question
+              li
+                a(href='#') Search Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
@@ -96,11 +139,13 @@ html
             a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-comments
               | Discussions
-              ul#discussionsSubmenu.collapse.list-unstyled
-                li
-                  a(href='discussions') Discussion Board
-                li 
-                  a(href='#') Group Chats
+            ul#discussionsSubmenu.collapse.list-unstyled
+              a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
+              li
+                a(href='#discussionsSubmenu' data-toggle='collapse' aria-expanded='false')
+                a(href='discussions') Discussion Board
+              li
+                a(href='#') Group Chats
         hr
         ul.list-unstyled.components
           li
@@ -122,76 +167,70 @@ html
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
+          button#add Add group
           .content-section
             .content-section-title messages
-            ul
+            ul#message-list
               li.message
                 img(src='/images/letters/letter-s.svg' alt='lettericon' width='40' height='40')
                 .divider
-                .messagegroup
-                  | Group 1
+                .messagegroup Group 1
                 span.status
                   span.status-circle.green
-                  |         message snippet
+                  |  message snippet
                 .button-wrapper
                   button.content-button.status-button.open Open
                   .menu
               li.message
                 img(src='/images/letters/letter-f.svg' alt='lettericon' width='40' height='40')
                 .divider
-                .messagegroup
-                  | Group 2
+                .messagegroup Group 2
                 span.status
                   span.status-circle
-                  |         messgage snippet
+                  |  messgage snippet
                 .button-wrapper
                   button.content-button.status-button Open
                   .menu
               li.message
                 img(src='/images/letters/letter-z.svg' alt='lettericon' width='40' height='40')
                 .divider
-                .messagegroup
-                  | Group 3
+                .messagegroup Group 3
                 span.status
                   span.status-circle.green
-                  |         message snippet here
+                  |  message snippet here
                 .button-wrapper
                   button.content-button.status-button.open Open
                   .menu
               li.message
                 img(src='/images/letters/letter-h.svg' alt='lettericon' width='40' height='40')
                 .divider
-                .messagegroup
-                  | Group 3
+                .messagegroup Group 3
                 span.status
                   span.status-circle.green
-                  |         message snippet here
+                  |  message snippet here
                 .button-wrapper
                   button.content-button.status-button.open Open
                   .menu
               li.message
                 img(src='/images/letters/letter-a.svg' alt='lettericon' width='40' height='40')
                 .divider
-                .messagegroup
-                  |  Group 3
+                .messagegroup  Group 3
                 span.status
                   span.status-circle.green
-                  |         message snippet here
+                  |  message snippet here
                 .button-wrapper
                   button.content-button.status-button.open Open
                   .menu
               li.message
                 img(src='/images/letters/letter-o.svg' alt='lettericon' width='40' height='40')
                 .divider
-                .messagegroup
-                  | Group 3
+                .messagegroup Group 3
                 span.status
                   span.status-circle.green
-                  |         message snippet here
+                  |  message snippet here
                 .button-wrapper
                   button.content-button.status-button.open Open
                   .menu
-
     .overlay
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
