--- a/server/views/questions_search.jade
+++ b/server/views/questions_search.jade
@@ -4,14 +4,14 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut - Courses
+    title Maple Donut - Question Search
 
     // 1,2 - CSS BOOTSTRAP LINK
-    // 3 - CUSTOM CSS LINK
+    // 3 - CUSTOM CSS LINKS
     // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    link(rel='stylesheet' href='/stylesheets/courses.css')
+    link(rel='stylesheet' href='/stylesheets/questions_search.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
     // 1 - FONT AWESOME SCRIPT
@@ -26,6 +26,9 @@ html
     script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js', integrity='sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
     script(type='text/javascript' src='/javascripts/sidebar.js')
+    // Bruce's Scripts
+    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
+    script(type='text/javascript' src='/javascripts/google.js')
 
   body
     //google auth stuff
@@ -113,7 +116,7 @@ html
               | Logout
       // Page Content
       #page
-        nav.navbar.navbar-expand-md
+        nav.navbar.navbar-expand-ml
           #navbar-header.container-fluid
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
@@ -122,30 +125,16 @@ html
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
-          #courseContainer
-            h3.text-center Search Courses
-            .d-flex.justify-content-center.h-100
-              .container.h-100
-                .d-flex.justify-content-center.h-100
-                  .searchBar
-                    form(action='/courses' method='post')
-                      input.searchInput(id='searchInput' name='course' type='text' placeholder='e.g. "CMPT355" or "Artificial Intelligence"')
-                      a.searchIcon(href='#')
-                        i.fas.fa-search
-
-
-                    
-            hr
-            h3.text-center Your Courses
-            .d-flex.justify-content-center
-              for courses in locals.data
-                .card(id='courseCard')
-                  .cardContainer(id='courseCardContainer')
-                    a(href='professors/'+courses.course_name) #{courses.course_name}
-
-
-
-
+          form.card.p-3
+            h2.text-center Have a question? We'll try to find an answer!
+            .container.h-100
+              .d-xl-flex.justify-content-center.h-100
+                .searchBar
+                  form(action='/questions_search' method='post')
+                    input.searchInput(type='text' name='question' placeholder='Supervised vs Unsupervised machine learning?')
+                    button.searchIcon(type='submit')
+                      i.fas.fa-search
+          hr
     .overlay
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
     script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
