--- a/server/views/course_search.jade
+++ b/server/views/course_search.jade
@@ -4,14 +4,14 @@ html
     meta(charset='utf-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
-    title Maple Donut - Settings
+    title Maple Donut - Course Search
 
     // 1,2 - CSS BOOTSTRAP LINK
     // 3 - CUSTOM CSS LINK
     // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    link(rel='stylesheet' href='/stylesheets/settings.css')
+    link(rel='stylesheet' href='/stylesheets/courses.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
     // 1 - FONT AWESOME SCRIPT
@@ -27,6 +27,30 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js')
     script(type='text/javascript' src='/javascripts/sidebar.js')
 
+  body
+    //google auth stuff
+    script.
+      function logOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        if(auth2.isSignedIn.get()){
+          auth2.signOut().then(function () {
+            console.log('User signed out.');
+            window.location.replace("login");
+          });
+        }
+
+      }
+      function onLoad() {
+      gapi.load('auth2', function() {
+      auth2 = gapi.auth2.init({
+        client_id: '798834471674-2hla9ttcnoausu8a6e2gsoo4j0f70v7u.apps.googleusercontent.com',
+        cookiepolicy: 'single_host_origin',
+        ux_mode: 'redirect',
+        redirect_uri: 'http://localhost:3000/home',
+        hosted_domain: 'mymacewan.ca',
+      });
+      });
+      }
     .wrapper
       // Sidebar
       nav#sidebar
@@ -54,7 +78,7 @@ html
                 li
                   a(href='courses') Current Courses
                 li
-                  a(href='#') Search Courses
+                  a(href='course_search') Search Courses
           li.active
             a(href='#questionsSubmenu' data-toggle='collapse' aria-expanded='false')
               i.fas.fa-question-circle
@@ -76,7 +100,7 @@ html
                 li
                   a(href='discussions') Discussion Board
                 li
-                  a(href='#') Group Chats
+                  a(href='chat') Group Chats
         hr
         ul.list-unstyled.components
           li
@@ -84,12 +108,12 @@ html
               i.fas.fa-cog
               | Settings
           li
-            a(href='login')
+            a(href='#' onclick='logOut();')
               i.fas.fa-sign-out-alt
               | Logout
       // Page Content
       #page
-        nav.navbar.navbar-expand-ml
+        nav.navbar.navbar-expand-md
           #navbar-header.container-fluid
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
@@ -98,13 +122,26 @@ html
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
-          h2 Account Settings
-          p Username: MacEwanUsername.
-          p Email: youremail@mapledonut.ca.
-          p Password: See MacEwan Account to change password.
-          p Profile Picture: Maple Donut.
-          p Discipline: Bachelor of Science.
-          p Bio: Insert Bio here.
-          a.btn.btn-primary(href='settings_edit') Edit
-          .line
+          .h-100.d-inline-block
+          h3.text-center Search Courses
+          .container.h-100
+            .d-flex.justify-content-center.h-100
+              .searchBar
+                form(action='/course_search' method='post')
+                  input.searchInput(id='searchInput' name='course' type='text' placeholder='e.g. "CMPT355" or "Artificial Intelligence"')
+                  button.searchIcon(type='submit')
+                    i.fas.fa-search
+
+          if locals.data != Null
+            hr
+            h3.text-center Results:
+            .d-flex.justify-content-center
+                for courses in locals.data
+                  .card(id='courseCard')
+                    .cardContainer(id='courseCardContainer')
+                      a(href='professors/'+courses.course_name) #{courses.course_name}
+
+
     .overlay
+    script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
+    script(src='https://apis.google.com/js/platform.js?onload=onLoad' async='' defer='')
