--- a/server/public/stylesheets/courses.css
+++ b/server/public/stylesheets/courses.css
@@ -4,6 +4,7 @@
 @import './layout/navbar.css';
 @import './layout/scrollbar.css';
 @import './layout/sidebar.css';
+@import './layout/searchbar.css';
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -40,13 +41,84 @@ a:focus {
     font-family: 'Roboto', sans-serif;
 }
 
-#page #navbar-header h3{
+#content h3{
     font-family: 'Roboto', sans-serif;
-    font-weight: 600;
-    font-size: 28px;
-    padding-top: 5px;
-    letter-spacing: 2px;
-    color: #FFF;
-    text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
+    font-weight: 400;
+    font-size: 22px;
+    letter-spacing: 1px;
+    color: #FCA926;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119)
+}
+#courseCard {
+    margin: 10px;
+    padding: 10px;
+    width: 200px;
+    background-color: #252525;
+    box-shadow: 0 2px 4px 0 rgba(211,211,211,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
 
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+    color: #F7F6E7;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119);
+}
+
+#courseCard:hover {
+    background-color: #353b48;
+    opacity: 0.8;
+    box-shadow: 0 0px 8px 0 #FCA926;
+}
+
+
+.searchResultContainer{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.card{
+    margin: 10px;
+    width: 200px;
+    background-color: #252525;
+    box-shadow: 0 2px 4px 0 rgba(211,211,211,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+}
+
+.card img{
+    padding: 35px;
+}
+
+.card:hover {
+    background-color: #353b48;
+    opacity: 0.8;
+    box-shadow: 0 0px 8px 0 #FCA926;
+}
+
+.cardContainer {
+    padding: 2px 8px;
+}
+
+#content .cardContainer h3{
+    margin-bottom: 0px;
+    font-weight: 400;
+    color: #FCA926;
+    text-shadow: 0px 1px 2px rgb(197, 161, 119);
+    letter-spacing: 1px;
+}
+
+#content .cardContainer h4{
+    margin-bottom: 0px;
+    font-weight: 400;
+    font-size: 20px;
+    color: rgba(211, 211, 211, 0.8);
+}
+
+#content .cardContainer p{
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(211, 211, 211, 0.8);
 }
